[package]
name = "match_end"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
minreq = { version = "=2.2.1", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring", branch = "0.16.20" }
webpki = { git = "https://github.com/skyline-rs/webpki" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
