[package]
name = "match_end"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
once_cell = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2", features = ["https-native", "json-using-serde"] }

[patch.crates-io]
# Specifying latest commit because git only doesn't use latest changes
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", rev = "f202fca"  }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
